manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: staging
spec:
  backend:
    serviceName: spinnaker-demo
    servicePort: 30201
